# opengl-book

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.env.json  vcpkg.json
app/: CMakeLists.txt  imgui.ini
app/assets/shaders/: fragment.glsl
app/assets/shaders/02-chapter/: animation-rotation.vert  animation.vert  mat4.glsl  triangle-frag.glsl  triangle-vert.glsl
app/assets/shaders/04-chapter/: instanced-cube.vert  plain-red-cube.frag  plain-red-cube.vert
app/assets/shaders/05-chapter/: texture.frag  texture.vert
app/assets/shaders/06-chapter/: sphere.frag  sphere.vert
app/assets/shaders/07-chapter/: blinn-phong.frag  blinn-phong.vert  gouraud.frag  gouraud.vert  phong.frag  phong.vert
app/src/: AppLayer.cpp  AppLayer.h  OverLayer.cpp  OverLayer.h  main.cpp  main_web.cpp
app/src/scenes/02-chapter/: SceneClearColor.h  SceneDrawingDot.cpp  SceneDrawingDot.h  SceneDrawingTriangle.h  SceneSimpleAnimation.h  SceneSimpleRotation.h
app/src/scenes/04-chapter/: SceneCubePyramid.h  SceneInstancedCube.h  SceneIntepolateCubeColor.h  ScenePlainRedCube.h  SceneSimpleSolarSystem.h  SceneSwarmCube.h
app/src/scenes/05-chapter/: ScenePyramidBrickTexture.h
app/src/scenes/06-chapter/: SceneDrawingSphere.h  SceneDrawingTorus.h  SceneLoadModel.h
app/src/scenes/07-chapter/: SceneGouraudShader.h
core/: CMakeLists.txt
core/src/core/: Application.cpp  Application.h  Layer.h  Window.cpp  Window.h
core/src/core/components/: Light.h  Material.cpp  Material.h
core/src/core/platform/: SDLDeleter.h
core/src/core/renderer/: Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  System.h  Texture.cpp  Texture.h
core/src/core/shapes/: ModelImported.cpp  ModelImported.h  Sphere.cpp  Sphere.h  Torus.cpp  Torus.h
core/src/scene/: LayerScene.cpp  LayerScene.h  Scene.h
